# my-accounting-app

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  GEMINI.md  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt
.claude/: settings.json  settings.local.json
.github/: CICD.md  claude-agent-config.json
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260102_000000_0001_initial_users_table.py  20260104_000000_0002_add_account_hierarchy.py  20260107_000000_0003_add_account_sort_order.py  20260107_000001_0004_create_audit_logs_table.py  20260109_000000_0005_add_transaction_notes.py  20260109_000001_0006_create_transaction_templates.py  20260110_000000_0007_create_import_sessions_table.py  20260112_000000_0008_create_api_tokens_table.py  20260117_000000_0009_create_advanced_tables.py  20260205_000000_0010_create_gmail_import_tables.py  20260206_101731_17b1dbe5b300_add_channel_binding_message_log_email_.py  20260219_000000_0011_add_bank_record_import_type.py  20260221_090503_9ece02a5fa8c_add_account_archive_fields.py
backend/scripts/: import_csv.py  load_test_reports.py  sync_version.py
backend/src/api/: deps.py  main.py  openapi_export.py  rate_limit.py
backend/src/api/mcp/: __init__.py  auth.py  server.py
backend/src/api/mcp/tools/: __init__.py  accounts.py  ledgers.py  transactions.py
backend/src/api/routes/: __init__.py  accounts.py  channels.py  chat.py  dashboard.py  export.py  gmail_import_routes.py  import_routes.py  installments.py  ledgers.py  recurring.py  reports.py  tags.py  templates.py  tokens.py  transactions.py  users.py  utils.py  voice.py  webhooks.py
backend/src/bots/: line_adapter.py  slack_adapter.py  telegram_adapter.py
backend/src/core/: config.py  exceptions.py  version.py
backend/src/db/: session.py
backend/src/models/: __init__.py  account.py  advanced.py  api_token.py  audit_log.py  channel_binding.py  channel_message_log.py  email_authorization.py  email_import_batch.py  gmail_connection.py  gmail_scan.py  import_session.py  ledger.py  transaction.py  transaction_template.py  user.py  user_bank_setting.py
backend/src/schemas/: __init__.py  account.py  advanced.py  api_token.py  audit_log.py  channel.py  chat.py  data_import.py  email_import.py  gmail_import.py  ledger.py  mcp.py  report.py  transaction.py  transaction_template.py
backend/src/services/: __init__.py  account_service.py  api_token_service.py  audit_service.py  bank_adapters.py  bank_configs.py  bot_message_handler.py  category_suggester.py  channel_binding_service.py  chat_service.py  csv_parser.py  dashboard_service.py  encryption.py  export_service.py  gmail_import_service.py  gmail_scheduler.py  gmail_service.py  import_service.py  installment_service.py  ledger_service.py  llm_category_enhancer.py  pdf_parser.py  recurring_service.py  report_service.py  tag_service.py  template_service.py  transaction_service.py  user_account_service.py
backend/src/services/bank_parsers/: __init__.py  base.py  cathay_parser.py  ctbc_parser.py  dbs_parser.py  esun_parser.py  fubon_parser.py  hncb_parser.py  hsbc_parser.py  sinopac_parser.py
backend/src/services/llm/: __init__.py  base.py  claude_provider.py  factory.py  gemini_live_provider.py  gemini_provider.py  ollama_provider.py
backend/src/templates/: balance_sheet.html  export_report.html  income_statement.html
backend/tests/: conftest.py
backend/tests/contract/: test_account_endpoints.py  test_account_service.py  test_channel_binding_api.py  test_export_api.py  test_ledger_endpoints.py  test_ledger_service.py  test_template_endpoints.py  test_template_service.py  test_transaction_create.py  test_transaction_list_filters.py  test_transaction_service.py  test_user_endpoints.py  test_user_service_contract.py  test_webhook_api.py
backend/tests/contract/api/: test_reports.py
backend/tests/contract/mcp_contract/: test_create_transaction.py  test_get_account.py  test_list_accounts.py  test_list_ledgers.py  test_list_transactions.py
backend/tests/e2e/: __init__.py  conftest.py  test_account_basic.py  test_account_hierarchy.py  test_balance_display.py  test_ledger_management.py  test_transactions.py  test_user_journeys.py  test_user_setup.py
backend/tests/edge_cases/: test_delete_ledger_with_crashes.py
backend/tests/edge_cases/mcp_edge/: test_accounts_edge.py  test_create_transaction_edge.py  test_transactions_edge.py
backend/tests/fixtures/csv/: creditcard_cathay.csv  creditcard_ctbc.csv  myab_amount_formats.csv  myab_date_formats.csv  myab_invalid.csv  myab_valid.csv
backend/tests/integration/: test_ai_assistant_flow.py  test_api_tokens.py  test_channel_binding_flow.py  test_import_api.py  test_installments.py  test_ledger_isolation.py  test_ledger_lifecycle.py  test_recurring_flow.py  test_tags_api.py  test_transaction_entry.py  test_transaction_flow.py  test_transaction_search.py
backend/tests/integration/mcp_integration/: test_accounts.py  test_create_transaction.py  test_ledgers.py  test_transactions.py
backend/tests/unit/: test_category_suggester.py  test_channel_binding_service.py  test_csv_parser.py  test_dashboard_service.py  test_export_service.py  test_import_service.py  test_installment_service.py  test_ledger_edge_cases.py  test_line_adapter.py  test_openapi_spec.py  test_pagination.py  test_recurring_service.py  test_slack_adapter.py  test_tag_service.py  test_telegram_adapter.py
backend/tests/unit/mcp_tests/: test_auth.py
backend/tests/unit/models/: test_api_token.py
backend/tests/unit/services/: test_api_token_service.py  test_audit_service.py  test_decimal_precision.py  test_double_entry_validation.py  test_report_service.py  test_transaction_edge_cases.py
frontend/: .dockerignore  .env.example  .eslintrc.json  Dockerfile  index.html  next.config.js  package-lock.json  package.json  tailwind.config.cjs  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
(+383 files in other folders)
