[project]
name = "myab"
version = "0.1.0"
description = "My Accounting Book"
dependencies = []
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=src/myab --cov-report=term-missing"
pythonpath = [
    "src"
]
