[project]
name = "myab"
version = "0.3.0"
description = "A personal accounting application built with Python and Tkinter."
authors = [{ name = "Gemini", email = "gemini@example.com" }]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["backend/alembic/versions/*", "backend/scripts/*", "src/*", "tests/*"]

[tool.ruff.lint]
select = ["E", "F", "W", "I001"] # Error, Flake8, Warnings, isort
ignore = [
    "E501",   # line too long (handled by formatter)
    "E741",   # ambiguous variable name
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["F841"]  # unused variables in tests
"backend/tests/**/*.py" = ["F841"]  # unused variables in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.bandit]
exclude_dirs = ["tests", "*/tests/*", ".venv"]
skips = ["B101"]
